# randoom

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  io.rs  main.rs
